--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@ body {
   font-family: "Mulish", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: var(--bg-dark);
+  background: var(--bg-light);
 }
 
 html {
@@ -26,9 +26,8 @@ html {
 #main {
   margin-left: 320px;
   padding: 40px;
-  height: 100vh;
+  height: 100%;
   box-sizing: border-box;
-  background: var(--bg-light);
   z-index: 2;
 }
 
