--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,7 @@ html {
 #main {
   margin-left: 320px;
   padding: 40px;
-  height: 100vh;
+  min-height: 100vh;
   box-sizing: border-box;
   background: var(--bg-light);
   z-index: 2;
