--- a/client/src/components/styles/AdCard.css
+++ b/client/src/components/styles/AdCard.css
@@ -1,5 +1,4 @@
 .cardStyle {
-  height: 350px;
   margin-bottom: 20px;
   padding: 15px;
 }
@@ -10,7 +9,6 @@
 
 .cardActionAreaStyle {
   height: 100%;
-  overflow: hidden;
 }
 
 .imageStyle {
@@ -27,10 +25,17 @@
 }
 
 .adLinkContainerStyle {
-  height: 42%;
+  /* height: 42%; */
 }
 
 .adFontStyle {
   font-size: 18px;
   font-weight: 600px;
+}
+
+.tag-box {
+  border: 1px solid #b2b2b2;
+  border-radius: 10px;
+  padding: 10px;
+  min-height: 150px;
 }
